# loekchipz

./: .dir-locals.el  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  build-debug.sh  gameentitiescomponentsandoperators.py  run-debug.sh  run-tests.sh  rustfmt.toml
code_templates/: include.hpp  source.cpp
data/: frobs.json  map  tiles.json
include/: combat.hpp  component.hpp  entity.hpp  floodfill.hpp  game.hpp  geometry.hpp  gui.hpp  io.hpp  main_menu.hpp  map.hpp  noise.hpp  pathfinding.hpp  random.hpp  state.hpp  unit.hpp  utils.hpp
src/: combat.cpp  component.cpp  entity.rs  floodfill.cpp  floodfill.rs  frobs.rs  game.cpp  game.rs  gamestate.rs  geometry.cpp  geometry.rs  gui.cpp  gui.rs  io.cpp  io.h  io.rs  log.rs  main.cpp  main.rs  main_menu.cpp  main_menu.rs  map.cpp  map.rs  pathfind.rs  pathfinding.cpp  random.cpp  state.cpp  states.rs  utils.cpp  world.rs
test/include/: example.hpp  floodfill_tests.hpp  gui_tests.hpp  pathfinding_tests.hpp
test/src/: example.cpp  floodfill_tests.cpp  gui_tests.cpp  main.cpp  pathfinding_tests.cpp
test/stubs/src/: io.cpp
